# stitchmeta

./: .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
doc/: api.rst  conf.py  index.rst
src/stitchmeta/: __init__.py  __main__.py  extractor.py  models.py
src/stitchmeta/readers/: __init__.py  base.py  fibics_tiff.py  registry.py
tests/: conftest.py  test_cli.py  test_readers.py  test_stitchmeta.py
